src/test/ui/traits/associated_type_bound/check-trait-object-bounds-4.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/check-trait-object-bounds-4.rs:15:5
   |
LL |     f::<dyn X<Y = str>>();
   |     ^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the following implementations were found:
             <String as Clone>
note: required by a bound in `f`
  --> $DIR/check-trait-object-bounds-4.rs:10:9
   |
LL | fn f<T: X + ?Sized>() {
   |         ^ required by this bound in `f`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
